# lazyjust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  flake.nix  justfile  mise.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  nix.yml  release.yml  sonarqube.yml
assets/: config-template.toml
assets/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  mono-amber.toml  nord.toml  one-dark.toml  solarized-dark.toml  tokyo-night.toml
nix/: checks.nix  common.nix  devshell.nix  package.nix
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/app/: action.rs  event_loop.rs  filter.rs  help_section.rs  mod.rs  reducer.rs  state.rs  types.rs  view.rs
src/config/: defaults.rs  file.rs  merge.rs  paths.rs  template.rs  writer.rs
src/discovery/: mod.rs  parse.rs  walk.rs
src/input/: keymap.rs  mod.rs
src/session/: manager.rs  mod.rs  osc.rs  pty.rs  reader.rs  retention.rs  shell.rs  wrapper.rs
src/theme/: builtin.rs  mod.rs  parse.rs  registry.rs
src/ui/: focus.rs  help.rs  icon_style.rs  layout.rs  list.rs  (+13 more)
tests/: cli_config_init.rs  cli_config_path.rs  config_loader.rs  discovery_integration.rs  discovery_parse_tests.rs  discovery_walk_tests.rs  filter_tests.rs  input_tests.rs  list_mode_cli_override.rs  list_mode_flow.rs  osc_tests.rs  reducer_tests.rs  retention_tests.rs  session_integration.rs  snapshots.rs  theme_picker_flow.rs  theme_registry.rs  types_smoke.rs
(+81 files in other folders)
